Revision history for Perl extension Email::MIME.

{{$NEXT}}

1.954     2024-05-02 17:12:30-04:00 America/New_York
        - Fix for CVE-2024-4140: An excessive memory use issue (CWE-770)
          exists in Email-MIME, before version 1.954, which can cause denial of
          service when parsing multipart MIME messages.  The fix is the new
          $MAX_PARTS configuration limits how many parts we will consider
          parsing.  The default $MAX_PARTS is 100.

1.953     2023-01-08 19:02:24-05:00 America/New_York
        - as promised, this release no longer works on v5.8; in fact, due to
          some upstream libraries, it hasn't in some time
        - documentation has been cleaned up to stop referencing long-dead other
          libraries or methods
        - some small code changes to benefit from v5.10 and v5.12 improvements

1.952     2021-12-14 09:57:27-05:00 America/New_York
        - exactly 1.951, except will install on 5.8.8
        - **ACHTUNG!**  Do not expect any future release to work on Perl v5.8

1.951     2021-12-14 09:41:01-05:00 America/New_York
        - non-trial release of 1.950 changes

1.950     2020-11-02 19:21:52-05:00 America/New_York (TRIAL RELEASE)
        - when computing filename, start from raw  Content-Disposition (thanks,
          Mishrakk)
        - avoid a potentially very slow regex in parsing (thanks, ivulfson)

1.949     2020-05-24 10:25:36-04:00 America/New_York
        - no changes since trial release

1.948     2020-05-09 14:57:17-04:00 America/New_York (TRIAL RELEASE)
        - fixes to handling of content-type parameters (thanks, dlucredativ and
          Pali Rohár)

1.947     2020-05-09 14:30:06-04:00 America/New_York (TRIAL RELEASE)
        - add $Email::MIME::MAX_DEPTH and refuse to parse deeper than that many
          parts; current default: 10

1.946     2017-08-31 09:29:41-04:00 America/New_York
        - propagate encode_check to subparts (thanks, Michael McClimon)